<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_confirm"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:clipToPadding="false"
    tools:context="co.otaoto.ConfirmActivity"
    >

    <TextView
        android:id="@+id/confirm_created_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_created"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/confirm_description1_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
        android:text="@string/confirm_description1"
        android:textAlignment="center"
        android:textAppearance="?android:textAppearanceMedium"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@+id/confirm_description2_text"
        app:layout_constraintTop_toBottomOf="@+id/confirm_created_text"
        />

    <TextView
        android:id="@+id/confirm_description2_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center_horizontal"
        android:text="@string/confirm_description2"
        android:textAlignment="center"
        android:textAppearance="?android:textAppearanceMedium"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirm_description1_text"
        />

    <TextView
        android:id="@+id/confirm_link_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center_horizontal"
        android:textAlignment="center"
        android:autoLink="web"
        android:linksClickable="false"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirm_description2_text"
        android:text="https://otaoto.herokuapp.com/swag-swag-swag/1234567890ABCDEF"
        />

    <ToggleButton
        android:id="@+id/confirm_show_secret_toggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textOff="@string/confirm_show_button"
        android:textOn="@string/confirm_hide_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirm_double_check_text"
        />

    <TextView
        android:id="@+id/confirm_double_check_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center_horizontal"
        android:text="@string/confirm_double_check"
        android:textAlignment="center"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirm_link_text"
        />

    <TextView
        android:text="Ssh! Don't tell anyone!"
        android:id="@+id/confirm_secret_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:gravity="center_horizontal"
        android:textAlignment="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirm_show_secret_toggle"
        />
</android.support.constraint.ConstraintLayout>
